fix button press issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,7 @@ button:active {
   outline: none;
 }
 
-.main-buttons.active {
+.main-button.active {
   transform: translateY(6px);
   box-shadow: none;
   outline: none;
